--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "",
+  "homepage": "https://yousf316.github.io/M3any/",
   "name": "my-react-app",
   "private": true,
   "version": "0.0.0",
