--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://yousf316.github.io/M3any/",
-  "name": "my-react-app",
+  "name": "M3any",
   "private": true,
   "version": "0.0.0",
   "type": "module",
